playground/k8s/deployments/traefik.yml
# Ingress Controller - This is the primary entry point to the kubernetes cluster.
#
# Limitation: We can only run one instance of Traefik due to limitations in letsencrypt
# automatic certificate provisioning.
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: docker.io/traefik:v2.4
          args:
            - --entrypoints.http.address=:80
            - --entrypoints.https.address=:443
            - --entrypoints.https.http.tls
            - --certificatesresolvers.le.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory
            - --certificatesresolvers.le.acme.email=haiku-inc@gmail.com
            - --certificatesresolvers.le.acme.keytype=RSA4096
            - --certificatesresolvers.le.acme.httpchallenge=true
            - --certificatesresolvers.le.acme.httpchallenge.entrypoint=http
            - --providers.kubernetesingress
          ports:
            - name: http
              containerPort: 80
            - name: https
              containerPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  type: LoadBalancer
  selector:
    app: traefik
  ports:
    - protocol: TCP
      port: 80
      name: http
      targetPort: 80
    - protocol: TCP
      port: 443
      name: https
      targetPort: 443
