playground/k8s/deployments/development.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git-deployment
  labels:
    app: git
spec:
  replicas: 1
  selector:
    matchLabels:
      app: git
  template:
    metadata:
      labels:
        app: git
    spec:
      containers:
      - name: gerrit
        image: docker.io/haiku/gerrit:3.3.8
        volumeMounts:
        - name: gerrit-data
          mountPath: /var/gerrit/review_site
        readinessProbe:
          tcpSocket:
            port: 29418
          initialDelaySeconds: 30
          periodSeconds: 5
        livenessProbe:
          tcpSocket:
            port: 29418
          initialDelaySeconds: 30
          periodSeconds: 5
      - name: cgit
        image: haiku/cgit
        volumeMounts:
        - name: gerrit-data
          mountPath: /var/git
      volumes:
      - name: gerrit-data
        persistentVolumeClaim:
          claimName: gerrit-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: cgit
spec:
  selector:
    app: git
  ports:
  - name: web
    port: 80
    targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: review
spec:
  selector:
    app: git
  ports:
  - name: web
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gitssh
spec:
  type: LoadBalancer
  selector:
    app: git
  ports:
  - name: git
    port: 22
    targetPort: 29418
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: git
spec:
  rules:
  - host: cgit.haiku-os.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cgit
            port:
              name: web
  - host: review.haiku-os.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: review
            port:
              name: web
